# anai-applio

./: .dockerignore  .gitignore  Dockerfile  app.py  core.py  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-stack.yml  entrypoint.sh  pyproject.toml  readme.md  requirements.txt  run-applio.sh  run_local.sh
assets/: config.json
assets/i18n/languages/: ko_KO.json
configs/: rabbitmq.conf
original_script/: README.md
rvc/configs/: config.py
rvc/infer/: infer.py
rvc/lib/tools/: split_audio.py
rvc/train/: train.py
scripts/: run_dev.sh  run_ecr_push.sh  run_local.sh  run_prod.sh  run_stack.sh
tabs/inference/: inference.py
tabs/inference/infer_utils/: batch_control.py  multi_infer.py
tabs/preprocess/: preprocessing.py
tabs/preprocess/audio_processing/: cleanup_temp_dir.py  merge_audio.py
tabs/release_viewer/: config.py  process_manager.py  release_viewer.py
tabs/settings/: cleanup_temp_dir.py  settings.py
tabs/settings/sections/: restart.py
tabs/train/: train.py
utils/: aws_util.py  celery_task_util.py  redis_result_util.py  redis_util.py  task_util.py  timbre_utils.py
