[project]
name = "anai-applio"
version = "1.0.0"
description = "Applio — RVC voice conversion"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "antlr4-python3-runtime==4.8",
    "beautifulsoup4",
    "certifi>=2025.8.3",
    "edge-tts==7.2.0",
    "einops",
    "faiss-cpu==1.7.3",
    "ffmpeg-python>=0.2.0",
    "gradio==5.23.1",
    "librosa==0.11.0",
    "matplotlib==3.7.2",
    "noisereduce",
    "numba==0.61.0",
    "numpy==1.26.4",
    "omegaconf>=2.0.6",
    "pedalboard",
    "pypresence",
    "pyyaml>=6.0.2",
    "requests>=2.31.0,<2.32.0",
    "scipy==1.11.1",
    "soundfile==0.12.1",
    "soxr",
    "stftpitchshift",
    "tensorboard",
    "tensorboardX",
    "torch==2.7.1",
    "torchcrepe==0.0.23",
    "torchaudio==2.7.1",
    "torchfcpe",
    "torchvision==0.22.1",
    "transformers==4.44.2",
    "tqdm",
    "wheel>=0.45.1",
    "wget",
    "black>=25.1.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
